tests/snapshots/compiler_tests__type_mismatch.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== COMPILATION FAILED ===
Errors (1):
  - CompilerError { message: "Type mismatch between 'i32' and 'u32'", span: Some(Span { start: 17, end: 37 }), severity: Error, phase: Semantics, hint: None }
